# hpcc-js-wasm

./: .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  404.html  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.html  README.md  babel.config.json  esbuild.mjs  hashmap.json  hw-base91.html  index-esm.html  index.html  karma.conf.cjs  lerna.json  nx.json  package-lock.json  package.json  release-please-config.json  rollup.config.js  rollup.config.mjs  test.html  tsconfig.json  vcpkg.json
.github/: copilot-instructions.md
.github/instructions/: troubleshooting.md
.github/workflows/: test-and-publish.yml
assets/: CHANGELOG.md.Cn1lcUJW.js  CHANGELOG.md.Cn1lcUJW.lean.js  README.md.CUb_zdj7.js  README.md.CUb_zdj7.lean.js  docs_bundler-integration-tests.md.CUCsAgxo.js  docs_bundler-integration-tests.md.CUCsAgxo.lean.js  docs_getting-started.md.Cuq0kVX4.js  docs_getting-started.md.Cuq0kVX4.lean.js  docs_graphviz-cli.md.B2xP41ng.js  docs_graphviz-cli.md.B2xP41ng.lean.js  examples_typescript_hello-world_commonjs_README.md.FEqS_W_E.js  examples_typescript_hello-world_commonjs_README.md.FEqS_W_E.lean.js  examples_typescript_hello-world_esm_README.md.yjtvOqIV.js  examples_typescript_hello-world_esm_README.md.yjtvOqIV.lean.js  index.md.BpyUaxoJ.lean.js  packages_base91_CHANGELOG.md.BOkxqy6R.js  packages_base91_CHANGELOG.md.BOkxqy6R.lean.js  packages_base91_README.md.D5DrPev5.js  packages_base91_README.md.D5DrPev5.lean.js  packages_duckdb_CHANGELOG.md.ByncpPhN.js  packages_duckdb_CHANGELOG.md.ByncpPhN.lean.js  packages_duckdb_README.md.4CbWfCTz.js  packages_duckdb_README.md.4CbWfCTz.lean.js  packages_duckdb_TOJSON.md.CQYsuoBS.js  packages_duckdb_TOJSON.md.CQYsuoBS.lean.js  packages_expat_CHANGELOG.md.CZgJiDqp.js  packages_expat_CHANGELOG.md.CZgJiDqp.lean.js  packages_expat_README.md.DaL8Ej4s.js  packages_expat_README.md.DaL8Ej4s.lean.js  packages_graphviz-cli_CHANGELOG.md.DJySnnci.js  packages_graphviz-cli_CHANGELOG.md.DJySnnci.lean.js  packages_graphviz-cli_README.md.B6LT5ZLE.js  packages_graphviz-cli_README.md.B6LT5ZLE.lean.js  packages_graphviz_CHANGELOG.md.CjK0EO57.js  packages_graphviz_CHANGELOG.md.CjK0EO57.lean.js  packages_graphviz_README.md.BbmG3Wqr.js  packages_graphviz_README.md.BbmG3Wqr.lean.js  packages_llama_CHANGELOG.md.CvDwOh6v.lean.js  packages_llama_README.md.ZZ_Kx7rN.js  packages_llama_README.md.ZZ_Kx7rN.lean.js  (+9 more)
cpp/: CMakeLists.txt
cpp/base91/: CMakeLists.txt  main.cpp  main.idl
cpp/base91/base91lib/: CMakeLists.txt  base91lib.cpp
cpp/expat/expatlib/: CMakeLists.txt  main.cpp  post.js  pre.js
cpp/graphviz/: CMakeLists.txt
cpp/graphviz/graphvizlib/: CMakeLists.txt  main.cpp  post.js
cpp/graphviz/lib/cgraph/: CMakeLists.txt
cpp/graphviz/lib/common/: CMakeLists.txt
cpp/graphviz/lib/dotgen/: CMakeLists.txt
cpp/graphviz/lib/gvc/: CMakeLists.txt
cpp/graphviz/lib/osage/: CMakeLists.txt
cpp/graphviz/lib/pathplan/: CMakeLists.txt
cpp/zlib/: CMakeLists.txt  main.cpp
cpp/zlib/zliblib/: CMakeLists.txt
docker/: ubuntu-dev.dockerfile
docs/: README.html  bundler-integration-tests.html  getting-started.html  graphviz-cli.html  index.md
docs/.vitepress/: config.js
docs/base91/src/base91/: README.html
docs/duckdb/src/duckdb/: README.html
docs/expat/src/expat/: README.html
docs/graphviz/src/graphviz/: README.html
scripts/: cmake.sh  cpp-build.sh  cpp-install-emsdk.sh  cpp-install-graphviz.sh  cpp-install-prerequisites.sh  cpp-install-vcpkg.sh  cpp-install-wasi-sdk.sh  cpp-update-vcpkg.sh  install-wasi-sdk.sh  install-wit-bindgen.sh
src/: expat.ts  fetch-browser.ts  fetch-node.ts  graphviz.ts  index-node.ts  index.ts  util.ts  zlib.ts
src-components/: CMakeLists.txt
src-components/test/: CMakeLists.txt  graphviz.cpp  hw.wit  logger.js  logger.wit  main.cpp
src-components/utils/: CMakeLists.txt  host.wit  main.cpp
src-components/utils2/: CMakeLists.txt  host.wit  main.cpp
src-components/zstd/: CMakeLists.txt  guest.wit  main copy.cpp  main.cpp
src-cpp/: CMakeLists.txt
src-cpp/HPCC-Platform/: CMakeLists.txt  a.out.cpp  a.out.hpp
src-cpp/HPCC-Platform/ecl/: CMakeLists.txt
src-cpp/HPCC-Platform/ecl/eclagent/: CMakeLists.txt
src-cpp/HPCC-Platform/ecl/hthor/: CMakeLists.txt
src-cpp/HPCC-Platform/rtl/: CMakeLists.txt
src-cpp/HPCC-Platform/rtl/eclrtl/: CMakeLists.txt
src-cpp/HPCC-Platform/system/: CMakeLists.txt
src-cpp/HPCC-Platform/system/jlib/: CMakeLists.txt
src-cpp/HPCC-Platform/system/libbase58/: CMakeLists.txt
src-cpp/HPCC-Platform/system/lzma/: CMakeLists.txt
src-cpp/base91/: CMakeLists.txt  main.idl
src-cpp/base91/base91lib/: base91lib.hpp
src-cpp/expat/: CMakeLists.txt
src-cpp/expat/expatlib/: CMakeLists.txt
src-cpp/graphviz/: CMakeLists.txt  times.cpp
src-cpp/graphviz/graphvizlib/: CMakeLists.txt
src-cpp/llama/: CMakeLists.txt  main.cpp  main.idl
src-cpp/overlay-ports/base91/: CMakeLists.txt  portfile.cmake
src-cpp/test/: CMakeLists.txt  common.h  main copy.cpp  main.cpp  test.wit
src-cpp/test-wasi/: CMakeLists.txt  graphviz_wasi.wit  main.cpp  test_wasi.wit
src-cpp/utils/: CMakeLists.txt  host.wit  main.cpp  utils.wit
src-cpp/zlib/: CMakeLists.txt  main.hpp  main.idl
src-cpp/zlib/zliblib/: zlib-helper.cpp  zlib-helper.hpp
src-cpp/zstd/: CMakeLists.txt
src-ts/: base91.ts  expat.ts  graphviz.ts  llama.ts  zstd.ts
src-ts/__tests__/: graphviz.ts  index-common.ts  llama.ts
src/__tests__/: expat.ts  graphviz.ts  index.ts  zlib.ts
tests/bundlers/: package.json  rollup.config.js  webpack.config.js
vcpkg-overlays/: wasm32-emscripten.cmake
vcpkg-overlays/asmjit/: portfile.cmake  vcpkg.json
vcpkg-overlays/base91/: CMakeLists.txt  base91.hpp  vcpkg.json
vcpkg-overlays/flatbuffers/: portfile.cmake
vcpkg-overlays/graphviz/: CMakeLists.txt  portfile.cmake
vcpkg-overlays/llama/: portfile.cmake  vcpkg.json
vcpkg-overlays/usearch/: portfile.cmake  vcpkg.json
vcpkg-overlays/wasm-micro-runtime/: portfile.cmake  vcpkg.json
vcpkg-triplets/: wasm32-emscripten-x.cmake  wasm32-emscripten.cmake  wasm32-wasi_sdk.cmake
(+20 files in other folders)
