CMAKE_MINIMUM_REQUIRED(VERSION 3.9.2)

PROJECT(hpcc-js-wasm)

SET(VCPKG_INCLUDE_DIR ${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/include)

# SET(CMAKE_INSTALL_PREFIX "..")

SET(EMSDK_DIR "${CMAKE_SOURCE_DIR}/emsdk")
SET(GRAPHVIZ_DIR "${CMAKE_SOURCE_DIR}/src-graphviz")

FIND_PACKAGE(expat CONFIG REQUIRED)
SET(EXPAT_INCLUDE_DIR ${VCPKG_INCLUDE_DIR})

FIND_PACKAGE(ZLIB REQUIRED)

SET(EM_COMMON_FLAGS "-s WASM=1 -s INVOKE_RUN=0 -s ALLOW_MEMORY_GROWTH=1 -s MINIMAL_RUNTIME=1 -s FILESYSTEM=0 -s MODULARIZE=1 -s EXPORT_ES6=1 -s USE_ES6_IMPORT_META=0")

ADD_SUBDIRECTORY(packages)
# ADD_SUBDIRECTORY(src-cpp)
