PROJECT(zlib)

ADD_SUBDIRECTORY(zliblib)

SET(EM_FLAGS "${EM_COMMON_FLAGS} -s EXPORT_NAME='${CMAKE_PROJECT_NAME}' --post-js ${CMAKE_CURRENT_BINARY_DIR}/main_glue.js")

#  Generate Glue from IDL file  ---
ADD_CUSTOM_COMMAND(
    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/main.idl
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/main_glue.js ${CMAKE_CURRENT_BINARY_DIR}/main_glue.cpp
    COMMAND python3 ${CMAKE_BINARY_DIR}/../emsdk/upstream/emscripten/tools/webidl_binder.py ${CMAKE_CURRENT_SOURCE_DIR}/main.idl ${CMAKE_CURRENT_BINARY_DIR}/main_glue
)
SET_PROPERTY(SOURCE main.cpp APPEND PROPERTY OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/main_glue.cpp)
#  ---  ---  ---

SET(SRCS
    main.cpp
)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
    zliblib
)

ADD_EXECUTABLE(zlib ${SRCS})

SET_TARGET_PROPERTIES(zlib PROPERTIES LINK_FLAGS "-s ENVIRONMENT=web ${EM_FLAGS}")

TARGET_LINK_LIBRARIES(zlib 
    zliblib
)

ADD_EXECUTABLE(zlib.node ${SRCS})

SET_TARGET_PROPERTIES(zlib.node PROPERTIES LINK_FLAGS "-s ENVIRONMENT=node ${EM_FLAGS}")

TARGET_LINK_LIBRARIES(zlib.node
    zliblib
)

INSTALL(FILES 
    ${CMAKE_CURRENT_BINARY_DIR}/zlib.wasm
    DESTINATION dist
    COMPONENT runtime
)
