PROJECT(base91)

ADD_SUBDIRECTORY(base91lib)

SET(EM_FLAGS "${EM_COMMON_FLAGS} -s EXPORT_NAME='${PROJECT_NAME}' --post-js ${CMAKE_CURRENT_BINARY_DIR}/main_glue.js")

#  Generate Glue from IDL file  ---
ADD_CUSTOM_COMMAND(
    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/main.idl
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/main_glue.js ${CMAKE_CURRENT_BINARY_DIR}/main_glue.cpp
    COMMAND python3 ${CMAKE_BINARY_DIR}/../emsdk/upstream/emscripten/tools/webidl_binder.py ${CMAKE_CURRENT_SOURCE_DIR}/main.idl ${CMAKE_CURRENT_BINARY_DIR}/main_glue
)
SET_PROPERTY(SOURCE main.cpp APPEND PROPERTY OBJECT_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/main_glue.cpp)
#  ---  ---  ---

SET(SRCS
    main.cpp
)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_EXECUTABLE(base91 ${SRCS})

SET_TARGET_PROPERTIES(base91 PROPERTIES LINK_FLAGS "-s ENVIRONMENT=web,worker ${EM_FLAGS}")

TARGET_LINK_LIBRARIES(base91
    base91lib
)

ADD_EXECUTABLE(base91.node ${SRCS})

SET_TARGET_PROPERTIES(base91.node PROPERTIES LINK_FLAGS "-s ENVIRONMENT=node ${EM_FLAGS}")

TARGET_LINK_LIBRARIES(base91.node
    base91lib
)

INSTALL(FILES 
    ${CMAKE_CURRENT_BINARY_DIR}/base91.wasm
    DESTINATION dist
    COMPONENT runtime
)
