# add_subdirectory (include)
# add_subdirectory (jhtree)
add_subdirectory (jlib)

# if (NOT JLIB_ONLY)
#    add_subdirectory (logaccess)
#    add_subdirectory (hrpc)
#    add_subdirectory (mp)
#    add_subdirectory (security)
#    add_subdirectory (xmllib)
#    add_subdirectory (xmllibtest "PLATFORM")
#    add_subdirectory (masking)
   
#    if (USE_AERON)
#       project (aeron_include)
#       SET(CMAKE_UNITY_BUILD FALSE)
#       remove_definitions(-fvisibility=hidden)
#       if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
#           SET (CMAKE_SAVED_AERON_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
#           SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-format-nonliteral")
#       endif()      
#       add_subdirectory (aeron)
#       if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
#           SET (CMAKE_CXX_FLAGS "${CMAKE_SAVED_AERON_CXX_FLAGS}")
#       endif()      
#    endif()
# endif( )
